# Android-williw

./: .gitignore  ANDROID_BUILD.md  ANDROID_CONFIG.md  Cargo.toml  README.md  TAURI_MOBILE_SETUP.md
alou-code/: .alou.json  .gitignore  ALOU.md  PARITY.md  PHILOSOPHY.md  README.md  ROADMAP.md  USAGE.md  install.sh  rename_claw_to_alou.py  run-alou.sh
alou-code/.github/scripts/: check_doc_source_of_truth.py
alou-code/.github/workflows/: release.yml
alou-code/docs/: container.md
alou-code/rust/: .clawd-todos.json  .gitignore  ALOU.md  MOCK_PARITY_HARNESS.md  PARITY.md  README.md  TUI-ENHANCEMENT-PLAN.md  USAGE.md  approve_all.py  approve_clob_usdc.py  approve_ct.py  approve_usdc.py  run-alou.sh
alou-code/rust/.omc/plans/: tui-enhancement-plan.md
alou-code/rust/crates/api/src/: client.rs
alou-code/rust/crates/api/src/providers/: mod.rs  openai_compat.rs
alou-code/rust/crates/commands/src/: lib.rs
alou-code/rust/crates/compat-harness/src/: lib.rs
alou-code/rust/crates/plugins/src/: lib.rs
alou-code/rust/crates/polymarket-cli/: .env.example  .env.local  Cargo.toml  EXAMPLES.md  INSTALL.md  README.md  test.sh
alou-code/rust/crates/polymarket-cli/src/: analysis.rs  clob.rs  main.rs  trading.rs  wallet.rs
alou-code/rust/crates/runtime/: Cargo.toml
alou-code/rust/crates/runtime/src/: config.rs  config_validate.rs  file_ops.rs  lane_events.rs  lib.rs  mcp_server.rs  oauth.rs  polymarket.rs  prompt.rs  session.rs  session_control.rs  stale_base.rs  task_packet.rs  task_registry.rs  worker_boot.rs
alou-code/rust/crates/rusty-claude-cli/: Cargo.toml
alou-code/rust/crates/rusty-claude-cli/src/: init.rs  main.rs  render.rs
alou-code/rust/crates/rusty-claude-cli/src/tui/: app.rs  layout.rs  mod.rs  state.rs  status_bar.rs  streaming_reporter.rs  thinking_indicator.rs
alou-code/rust/crates/rusty-claude-cli/src/tui/components/: chat.rs  markdown.rs  mod.rs  prompt.rs  status.rs  tool.rs
alou-code/rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  compact_repl_panic.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
alou-code/rust/crates/tools/: Cargo.toml
alou-code/rust/crates/tools/src/: lib.rs  pdf_extract.rs
alou-code/scripts/: dogfood-build.sh
api/: Cargo.toml
api-server/: Cargo.toml
api-server/src/: main.rs
api/src/: main.rs
api/src/auth/: jwt.rs  mod.rs  wallet.rs
api/src/db/: database.rs  mod.rs
api/src/models/: mod.rs  request.rs  user.rs
api/src/p2p/: mod.rs  signaling.rs  stun_client.rs  tunnel.rs  turn_client.rs
api/src/payments/: alipay.rs  crypto.rs  mod.rs  wechat.rs
api/src/routes/: auth.rs  compute.rs  local.rs  mod.rs  p2p.rs  payment.rs
api/src/services/: auth_service.rs  local_model_service.rs  mod.rs  model_service.rs  p2p_service.rs  payment_service.rs
core/: Cargo.toml
core/src/: gguf_engine.rs  lib.rs  mock_engine.rs
docs/: REMOTE_ACCESS.md
frontend/: Cargo.toml  build.mjs  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: api.ts  lib.rs  main.rs  main.ts  state.ts  types.ts  ui.ts
frontend/src/api/: mod.rs
frontend/src/components/: mod.rs  model_card.rs  nav.rs  wallet_connect.rs
frontend/src/pages/: api_server.rs  local_models.rs  login.rs  mod.rs  model_detail.rs  models.rs  orders.rs  payment.rs  profile.rs
frontend/src/screens/: chat.ts  connect.ts  home.ts  models.ts
scripts/: build-android-debug.sh  build-release.sh  start-ngrok.ps1  start-ngrok.sh  test-e2e.sh
shared/: Cargo.toml
shared/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
