[workspace]
resolver = "2"
members = [
    "shared",
    "api",
]

exclude = ["frontend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Williw Team"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
ethers = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = "4"
leptos = "0.6"
leptos-router = "0.6"
leptos_router = { version = "0.6", package = "leptos-router" }
reqwest = { version = "0.11", features = ["json"] }
