[workspace]
resolver = "2"
members = [
    "shared",
    "core",         # candle inference engine (no Tauri)
    "api-server",   # standalone Axum HTTP API binary
    "src-tauri",    # Tauri 2 desktop + mobile shell
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Williw Team"]
license = "MIT"

[workspace.dependencies]
williw-shared = { path = "shared" }
williw-core = { path = "core" }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
