[package]
name = "williw-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "williw-api"
path = "src/main.rs"

[dependencies]
williw-shared = { workspace = true }
williw-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = "0.3"
futures-core = "0.3"
