[package]
name = "williw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# 默认不开启 candle 编译——candle 在不同平台上编译链路各异，
# 部署时按需启用。MVP 阶段默认提供 mock 后端（保证 release 编译通过）。
default = []
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]

[dependencies]
williw-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokenizers = "0.21"
tokio = { workspace = true }

candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
