[package]
name = "williw-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
williw-shared = { path = "../shared" }

leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "History", "Location"] }
reqwest = { workspace = true }

[dependencies.leptos_router]
version = "0.6"
package = "leptos-router"
