[package]
name = "williw-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
williw-shared = { path = "../shared" }
leptos = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "History", "Location"] }
reqwest = { version = "0.11", features = ["json"] }
leptos_router = "0.8"

[features]
default = ["leptos/nightly"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

[profile.release]
opt-level = "z"
lto = true
strip = true