[package]
name = "williw-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "2.0"

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["shell-execute", "http-client", "fs-all", "dialog-all"] }
tokio = { version = "1", features = ["full"] }
williw-shared = { path = "../shared" }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[[bin]]
name = "williw"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
