[package]
name = "williw-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
williw-shared = { workspace = true }
williw-core = { workspace = true }

tauri = { version = "2.0", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-stream = "0.3"
futures-core = "0.3"
parking_lot = "0.12"

[[bin]]
name = "williw"
path = "src/main.rs"

[lib]
name = "williw_tauri_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
