[package]
name = "polymarket-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Polymarket trading and analysis"
license = "MIT"
authors = ["刘元杰 < yuanjieliu65@gmail.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
colored = "2.0"
indicatif = "0.17"
web3 = "0.19"
ethers = { version = "2.0", features = ["rustls"] }
hex = "0.4"
chrono = "0.4"
rand = "0.8"
polymarket-client-sdk = { version = "0.4.4", features = ["clob", "gamma"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }